@@ -3,6 +3,8 @@
 ==============================
 Release 5.*
 ==============================
+2014-06-07    Add ScrollViewer control to WPFMessageBox to show a vertical scrollbar if the text became to long
+2014-06-07    The continue button was not able to get the default focus
 2014-06-07    Setting the default button on the WPFMessageBox was not working
 2014-06-07    Add "_Don't show this message again" checkbox possibility to the WPFMessageBox
 2014-06-04    Adjust ButtonsPanel in WPFMessageBox to have dynamic longer buttons if the text is adjusted
